<resources>
    <string name="app_name" translatable="false">Feliya Attendance</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="settings">settings</string>
    <string name="explore">Explore</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_text_login_title">Hey,\nLogin Now!</string>
    <string name="auth_text_login_description">Not have account?</string>
    <string name="auth_text_login_to_register">Create new Account</string>
    <string name="auth_text_register_title">Hello,\nRegister Now!</string>
    <string name="auth_text_register_description">Already have account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="password_helper">Password must be at least 8 characters</string>
    <string name="worker_id">Worker Id</string>
    <string name="name_is_empty">Name is empty, please fill it</string>
    <string name="phone_is_empty">Phone is empty, please fill it</string>
    <string name="phone_is_not_valid">Phone is not valid, please check it</string>
    <string name="role_is_empty">Please select your role, fill it</string>
    <string name="email_is_empty">Email is empty, please fill it</string>
    <string name="password_is_empty">Password is empty, please fill it</string>
    <string name="email_is_not_valid">Email is not valid, please check it</string>
    <string name="password_is_not_match">Password is not match, please check it</string>
    <string name="worker_id_is_not_valid">Worker Id is not valid, please check it</string>
    <string name="team_is_empty">Team is empty, please fill it</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="logout_success">Logout Success</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="logout_confirmation">Are you sure want to logout from Feliya Attendance?</string>
    <string name="delete_account_success">Delete Account Success</string>
    <string name="delete_account_failed">Delete Account Failed</string>
    <string name="delete_account_confirmation">Are you sure want to delete your account?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="select_role">Select Role</string>
    <string name="hours_default">--:--</string>
    <string name="greetings_good_morning">Good Morning</string>
    <string name="greetings_good_afternoon">Good Afternoon</string>
    <string name="greetings_good_evening">Good Evening</string>
    <string name="dashboard">Dashboard</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="in_and_out">In &amp; Out</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="dashboard_total_hours_title">Total Hours</string>
    <string name="dashboard_total_days_title">Total Days</string>
    <string name="your_activity">Your Activity</string>
    <string name="view_all">View all</string>
    <string name="leave_application">Leave Application</string>
    <string name="placeholder_hour">--:--</string>
    <string name="clock_in_title">Confirm Clock In</string>
    <string name="clock_out_title">Confirm Clock Out</string>
    <string name="image_proof">Image Proof</string>
    <string name="upload_image_from_camera_or_gallery">Upload from camera or gallery</string>
    <string name="select_project">Select Project</string>
    <string name="information">Information</string>
    <string name="set_time">Set Time</string>
    <string name="image_not_found">Image Not Found</string>
    <string name="insert_image_proof">Insert Image Proof</string>
    <string name="select_camera_or_gallery">Select Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="clock_in_proof">Clock In Proof</string>
    <string name="clock_out_proof">Clock Out Proof</string>
    <string name="work_description">Work Description</string>
    <string name="menu">Menu</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="account_upload_image">Upload Image Profile</string>
    <string name="date">Date</string>
    <string name="status_approved">Approved</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_pending">Pending</string>
    <string name="dash">-</string>
    <string name="worker">Worker</string>
    <string name="feature">Feature</string>
    <string-array name="features">
        <item>Add Worker</item>
        <item>Add Project</item>
        <item>Attendance Approval</item>
        <item>Generate Report</item>
    </string-array>
    <string name="project">Project</string>
    <string name="projects">Projects</string>
    <string name="project_name">Project Name</string>
    <string name="create_new_project">Create New Project</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="calendar">Calendar</string>
    <string name="choose_date">Choose Date</string>
    <string name="select_status_project">Select Status</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="status_project_inactive">Inactive</string>
    <string name="status_project_active">Active</string>
    <string name="status_project_completed">Completed</string>
    <string name="error_empty_project_name">Project Name cannot be empty</string>
    <string name="error_empty_location">Location cannot be empty</string>
    <string name="error_empty_status">Please select a status</string>
    <string name="error_taking_picture">Failed to take picture</string>
    <string name="error_picking_image">Failed to pick image</string>
    <string name="error_general">An error occurred</string>
    <string name="title_dialog_confirmation">Are you sure?</string>
    <string name="sure">Sure</string>
    <string name="description_dialog_confirmation_default">This cannot be changed, or updated.</string>
    <string name="successfully">Successfully</string>
    <string name="failed">Failed</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="process_success">The process you have done has been successful</string>
    <string name="process_failed">The process you are performing has failed.</string>
    <string name="account_pending_message">Your account is pending approval. Please wait for admin confirmation.</string>
    <string name="account_suspended_message">Your account has been suspended. Please contact admin for more information.</string>
    <string name="account_activated_message">Your account has been activated</string>
    <string name="invalid_role_not_found">Invalid Role Note Found</string>
    <string name="invalid_account_status">Invalid account status. Please contact admin.</string>
    <string name="user_not_found">User not found.</string>
    <string name="error_checking_account_status">Error checking account status:</string>
    <string name="workers">Workers</string>
    <string name="attendances">Attendances</string>
    <string name="attendance">Attendance</string>
    <string name="select_status_attendance">Select Status Attendance</string>
    <string name="status_attendance">Status</string>
    <string name="please_clock_in_first">Please Clock In First</string>
    <string name="detail_attendance">Detail Attendance</string>
    <string name="date_attendance">Date</string>
    <string name="working">Working</string>
    <string name="overtime">Overtime</string>
    <string name="total">Total</string>
    <string name="confirmation_delete_attendance">Delete Attendance</string>
    <string name="confirmation_delete_attendance_description">Are you sure you want to delete the attendance permanently? You cannot revert the changes.</string>
    <string name="zero">0</string>
    <string name="admin_menu_see_worker_list">List Worker</string>
    <string name="admin_menu_attendance_approval">Attendance\nApproval</string>
    <string name="admin_menu_add_worker">Add Worker</string>
    <string name="admin_menu_add_project">Add Project</string>
    <string name="admin_menu_generate_excel" translatable="false">Generate Excel</string>
    <string name="admin_menu_analytic_performance" translatable="false">Analytics Performance</string>
    <string name="admin_menu_generate_pdf" translatable="false">Generate PDF</string>
    <string name="admin_menu_delete_account">Delete Account</string>
    <string name="admin_menu_make_announcement">Announcement</string>
    <string name="admin_menu_history_attendance">History Attendance</string>
    <string name="admin_menu_delete_account_title_confirmation">Delete Account Confirmation</string>
    <string name="admin_menu_delete_account_description_confirmation">Are you sure want to delete worker account?</string>
    <string name="analysis_worker" translatable="false">Analysis Worker</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete_account">Delete Account</string>
    <string name="suspend_account">Suspend Account</string>
    <string name="activate_account">Activate Account</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus.
    </string>
    <string name="strip">-</string>
    <string name="announcement">Announcement</string>
    <string name="add_post">Add Post</string>
    <string name="success_create_announcement">Announcement added successfully</string>
    <string name="failed_create_announcement">An error occurred</string>
    <string name="no_announcement">No Announcement</string>
    <string name="no_announcement_description">Failed to load announcements</string>
    <string name="delete_announcement">Delete Announcement</string>
    <string name="delete_announcement_description">Are you sure to delete this announcement?</string>
    <string name="delete_announcement_success">Successfully Delete Announcement</string>
    <string name="success_upload_image">Profile image updated</string>
    <string name="failed_upload_image">Failed to upload image</string>
    <string name="permission_required">Permission Required</string>
    <string name="select_month">Select Month</string>
    <string name="detail_project">Detail Project</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="history_pending">History Pending</string>
    <string name="history_approved">History Approved</string>
    <string name="history_rejected">History Rejected</string>
    <string name="period">Period</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="history_activity">History Activity</string>
    <string name="edit_attendance">Edit Attendance</string>
</resources>