<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"

    android:backgroundTint="@color/white"

    app:cardCornerRadius="8dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:padding="12dp"
            android:text="@string/filter"
            android:background="@color/gray_ultra_light"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="260dp"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

        <!-- Active -->
        <LinearLayout
            android:id="@+id/linear_layout_active"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_square_cursor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/status_project_active"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Inactive -->
        <LinearLayout
            android:id="@+id/linear_layout_inactive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus_square" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/status_project_inactive"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Completed -->
        <LinearLayout
            android:id="@+id/linear_layout_completed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_square" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/status_project_completed"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>