<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_ultra_light"
            android:fontFamily="@font/inter_medium"
            android:padding="12dp"
            android:text="@string/title_dialog_confirmation"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="32dp"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:maxLines="3"
            android:paddingEnd="64dp"
            android:text="@string/description_dialog_confirmation_default"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="4dp"
                app:strokeColor="@color/gray_light"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:paddingStart="24dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="8dp"
                    android:textSize="12sp"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/status_approved"
                app:cardCornerRadius="4dp"
                app:strokeWidth="0dp">

                <TextView
                    android:id="@+id/tv_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:paddingStart="24dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="8dp"
                    android:textSize="12sp"
                    android:text="@string/sure"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>